--- a/applications/openshift/scheduler/scheduler_port_is_zero/rule.yml
+++ b/applications/openshift/scheduler/scheduler_port_is_zero/rule.yml
@@ -6,7 +6,7 @@ title: Ensure that the port parameter is zero
 
 {{% set custom_jqfilter = '{{.var_scheduler_argument_filter}}' %}}
 {{% set default_jqfilter = '[.data."pod.yaml"]' %}}
-{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}/api/v1/namespaces/{{.var_openshift_kube_apiserver_namespace}}/pods?labelSelector=app%3Dkube-scheduler{{else}}{{.var_scheduler_filepath}}{{end}}' %}}
+{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}/api/v1/namespaces/clusters-{{.hypershift_cluster}}/pods?labelSelector=app%3Dkube-scheduler{{else}}{{.var_scheduler_filepath}}{{end}}' %}}
 {{% set default_api_path = '/api/v1/namespaces/openshift-kube-scheduler/configmaps/kube-scheduler-pod' %}}
 {{% set dump_path = default_api_path ~ ',' ~ default_jqfilter ~ ',' ~ custom_jqfilter %}}
 
