--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2014,10 +2014,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # we do not check /et/shadow
+    status: automated
     rules:
-    - account_disable_post_pw_expiration
-    - var_account_disable_post_pw_expiration=30
+      - account_disable_post_pw_expiration
+      - var_account_disable_post_pw_expiration=30
+      - accounts_set_post_pw_existing
 
   - id: 5.5.1.5
     title: Ensure all users last password change date is in the past (Automated)
