--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -2159,17 +2159,16 @@ controls:
       - accounts_password_warn_age_login_defs
       - var_accounts_password_warn_age_login_defs=7
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5536
   - id: 5.6.1.4
     title: Ensure inactive password lock is 30 days or less (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: partial  # The rule below does not validate wheter all current users' INACTIVE setting conforms to the control.
+    status: automated
     rules:
       - account_disable_post_pw_expiration
       - var_account_disable_post_pw_expiration=30
+      - accounts_set_post_pw_existing
 
   - id: 5.6.1.5
     title: Ensure all users last password change date is in the past (Automated)
