Update password hashing algorithm CIS requirement
The 5.4.3 requirement for RHEL7 is now automated.
The 5.5.4 requirement for RHEL8 and RHEL9 is now better aligned to the
benchmark since newer versions also mention the /etc/login.defs file.

--- a/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
@@ -28,6 +28,9 @@ identifiers:
 references:
     anssi: BP28(R32)
     cis-csc: 1,12,15,16,5
+    cis@rhel7: 5.4.3
+    cis@rhel8: 5.5.4
+    cis@rhel9: 5.5.4
     cis@sle12: 5.4.1.1
     cis@sle15: 5.4.1.1
     cis@ubuntu2204: 5.4.4
