--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1959,9 +1959,12 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # our rule does not check for password-auth
+    status: automated
     rules:
-    - set_password_hashing_algorithm_systemauth
+      - set_password_hashing_algorithm_systemauth
+      - set_password_hashing_algorithm_passwordauth
+      - set_password_hashing_algorithm_logindefs
+      - var_password_hashing_algorithm=SHA512
 
   - id: 5.4.4
     title: Ensure password reuse is limited (Automated)
