New rule package_dhcp_client_removed

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -615,6 +615,7 @@ controls:
     status: automated
     rules:
       - package_dhcp_removed
+      - package_dhcp_client_removed
       - service_dhcpd_disabled
 
   - id: 2.2.6
