--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -601,7 +601,9 @@ controls:
     status: automated
     rules:
       - package_dhcp_removed
+      - package_dhcp_client_removed
       - service_dhcpd_disabled
+    
 
   - id: 2.2.6
     title: Ensure LDAP server is not installed (Automated)
