--- a/linux_os/guide/services/ldap/openldap_server/package_openldap-servers_removed/rule.yml
+++ b/linux_os/guide/services/ldap/openldap_server/package_openldap-servers_removed/rule.yml
@@ -5,10 +5,12 @@ prodtype: rhel7,rhel8,rhel9,sle12,sle15,ubuntu2004,ubuntu2204
 title: 'Uninstall openldap-servers Package'
 
 description: |-
-    {{% if 'ubuntu' not in product %}}
-    The openldap-servers package is not installed by default on a {{{ full_name }}}
-    {{% else %}}
+    {{% if product in ['sle12', 'sle15'] %}}
+    The openldap2 package is not installed by default on a {{{ full_name }}}
+    {{% elif 'ubuntu' in product %}}
     The slapd package is not installed by default on a {{{ full_name }}}
+    {{% else %}} 
+    The openldap-servers package is not installed by default on a {{{ full_name }}}
     {{% endif %}}
     system. It is needed only by the OpenLDAP server, not by the
     clients which use LDAP for authentication. If the system is not
@@ -45,24 +47,32 @@ references:
 ocil_clause: 'it does not'
 
 ocil: |-
-    {{% if 'ubuntu' not in product %}}
+    {{% if product in ['sle12','sle15'] %}}
     To verify the <tt>openldap-servers</tt> package is not installed, run the
     following command:
-    <pre>$ rpm -q openldap-servers</pre>
+    <pre>$ rpm -q openldap2</pre>
     The output should show the following:
-    <pre>package openldap-servers is not installed</pre>
-    {{% else %}}
+    <pre>package openldap2 is not installed</pre>    
+    {{% elif 'ubuntu' in product %}}
     To verify the <tt>slapd</tt> package is not installed, run the
     following command:
     <pre>$ dpkg -l slapd</pre>
     The output should show the following:
     <pre>package slapd is not installed</pre>
+    {{% else %}}
+    To verify the <tt>openldap-servers</tt> package is not installed, run the
+    following command:
+    <pre>$ rpm -q openldap-servers</pre>
+    The output should show the following:
+    <pre>package openldap-servers is not installed</pre>
     {{% endif %}}
 
 template:
     name: package_removed
     vars:
         pkgname: openldap-servers
+        pkgname@sle12: openldap2
+        pkgname@sle15: openldap2
         pkgname@ubuntu1604: slapd
         pkgname@ubuntu1804: slapd
         pkgname@ubuntu2004: slapd
