--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/accounts_password_last_change_is_in_past/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/accounts_password_last_change_is_in_past/rule.yml
@@ -24,6 +24,8 @@ references:
     cis@rhel9: 5.6.1.5
     cis@sle12: 5.4.1.6
     cis@sle15: 5.4.1.6
+    cis@ubuntu2004: 5.4.1.5
+    cis@ubuntu2204: 5.5.1.5
 
 ocil_clause: 'any interactive user password that has last change time in the future'
 
