Resolve issues found in review of #10185

--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_pwhistory_remember_system_auth/policy/stig/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_pwhistory_remember_system_auth/policy/stig/shared.yml
@@ -24,4 +24,4 @@ fixtext: |-
 
     Add the following line in "/etc/pam.d/system-auth" (or modify the line to have the required value):
 
-    password required pam_pwhistory.so use_authtok remember=5 retry=3
+    password requisite pam_pwhistory.so use_authtok remember=5 retry=3
