--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2235,7 +2235,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - no_empty_passwords_etc_shadow
 
   - id: 6.2.3
     title: Ensure all groups in /etc/passwd exist in /etc/group (Automated)
