--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords_etc_shadow/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords_etc_shadow/rule.yml
@@ -24,12 +24,14 @@ severity: high
 platform: machine
 
 identifiers:
+    cce@rhel7: CCE-86347-2
     cce@rhel8: CCE-85953-8
     cce@rhel9: CCE-85972-8
     cce@sle12: CCE-83249-3
     cce@sle15: CCE-91155-2
 
 references:
+    cis@rhel7: 6.2.2
     cis@rhel8: 6.2.1
     cis@rhel9: 5.6.6,6.2.2
     cis@ubuntu2204: 6.2.2
