Update references for no_empty_passwords rule
This rule was related to 5.4.2 CIS requirement for RHEL8 and RHEL9.
However, it is actually mentioned in 5.4.1 requirement. The 5.4.1
requirement is manual for CIS, but is still relevant to include this
rule in the control file.

--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -2212,6 +2212,8 @@ controls:
       - l1_server
       - l1_workstation
     status: manual
+    rules:
+      - no_empty_passwords
 
   - id: 5.4.2
     title: Ensure authselect includes with-faillock (Automated)
@@ -2535,8 +2537,6 @@ controls:
     status: automated
     rules:
       - no_empty_passwords_etc_shadow
-    related_rules:
-      - no_empty_passwords
 
   - id: 6.2.2
     title: Ensure all groups in /etc/passwd exist in /etc/group (Automated)
