--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -2063,6 +2063,8 @@ controls:
       - l1_server
       - l1_workstation
     status: manual
+    rules:
+      - no_empty_passwords
 
   - id: 5.4.2
     title: Ensure authselect includes with-faillock (Automated)
@@ -2404,8 +2406,6 @@ controls:
     status: automated
     rules:
       - no_empty_passwords_etc_shadow
-    related_rules:
-      - no_empty_passwords
 
   - id: 6.2.3
     title: Ensure all groups in /etc/passwd exist in /etc/group (Automated)
