--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords/rule.yml
@@ -34,6 +34,8 @@ identifiers:
 
 references:
     cis-csc: 1,12,13,14,15,16,18,3,5
+    cis@rhel8: 5.4.1
+    cis@rhel9: 5.4.1
     cis@ubuntu2004: 6.2.1
     cis@ubuntu2204: 6.2.1
     cjis: 5.5.2
