--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_kex/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_kex/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15,ubuntu2004
+prodtype: sle12,sle15,ubuntu2004,ubuntu2204
 
 title: 'Use Only Strong Key Exchange algorithms'
 
@@ -26,6 +26,7 @@ references:
     cis@sle12: 5.2.15
     cis@sle15: 5.2.15
     cis@ubuntu2004: 5.2.14
+    cis@ubuntu2204: 5.2.15
     pcidss: Req-2.2.7
 
 ocil_clause: 'KexAlgorithms option is commented out or not using strong hash algorithms'
