Corrections in rule chronyd_specify_remote_server

--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -571,6 +571,7 @@ controls:
     rules:
       - chronyd_specify_remote_server
       - chronyd_run_as_chrony_user
+      - var_multiple_time_servers=suse
 
   - id: 2.2.2
     title: Ensure X11 Server components are not installed (Automated)
