--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -573,6 +573,8 @@ controls:
     rules:
     - chronyd_specify_remote_server
     - chronyd_run_as_chrony_user
+    - var_multiple_time_servers=suse
+
 
   - id: 2.2.1.4
     title: Ensure ntp is configured (Automated)
