Enable no_forward_files rule for RHEL
The no_forward_files satisfy CIS requirement for RHEL7, RHEL8 and RHEL9.
The respective requirements in CIS control files were also updated.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2349,7 +2349,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - no_forward_files
 
   - id: 6.2.16
     title: Ensure no users have .netrc files (Automated)
