--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -2508,14 +2508,14 @@ controls:
     rules:
       - no_netrc_files
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5505
   - id: 6.2.14
     title: Ensure no local interactive user has .forward files (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - no_forward_files
 
   - id: 6.2.15
     title: Ensure no local interactive user has .rhosts files (Automated)
