--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_forward_files/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_forward_files/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: alinux2,alinux3,sle12,sle15,ubuntu2004
+prodtype: alinux2,alinux3,rhel7,rhel8,rhel9,sle12,sle15,ubuntu2004
 
 title: 'Verify No .forward Files Exist'
 
@@ -16,12 +16,18 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86754-9
+    cce@rhel8: CCE-86755-6
+    cce@rhel9: CCE-86756-4
     cce@sle12: CCE-92349-0
     cce@sle15: CCE-92622-0
 
 references:
     cis@alinux2: 6.2.11
     cis@alinux3: 6.2.7
+    cis@rhel7: 6.2.15
+    cis@rhel8: 6.2.14
+    cis@rhel9: 6.2.14
     cis@sle12: 6.2.9
     cis@sle15: 6.2.9
     cis@ubuntu2004: 6.2.8
