--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2342,7 +2342,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - accounts_user_dot_no_world_writable_programs
 
   - id: 6.2.15
     title: Ensure no users have .forward files (Automated)
