Fix package names for some SUSE packages

--- a/linux_os/guide/services/ldap/openldap_client/package_openldap-clients_removed/rule.yml
+++ b/linux_os/guide/services/ldap/openldap_client/package_openldap-clients_removed/rule.yml
@@ -43,6 +43,8 @@ template:
     name: package_removed
     vars:
         pkgname: openldap-clients
+        pkgname@sle12: openldap2-client
+        pkgname@sle15: openldap2-client
         pkgname@ubuntu1604: ldap-utils
         pkgname@ubuntu1804: ldap-utils
         pkgname@ubuntu2004: ldap-utils
