--- a/linux_os/guide/services/ldap/openldap_server/package_openldap-servers_removed/rule.yml
+++ b/linux_os/guide/services/ldap/openldap_server/package_openldap-servers_removed/rule.yml
@@ -63,6 +63,8 @@ template:
     name: package_removed
     vars:
         pkgname: openldap-servers
+        pkgname@sle12: openldap2
+        pkgname@sle15: openldap2
         pkgname@ubuntu1604: slapd
         pkgname@ubuntu1804: slapd
         pkgname@ubuntu2004: slapd
