--- a/linux_os/guide/system/logging/package_rsyslog-gnutls_installed/rule.yml
+++ b/linux_os/guide/system/logging/package_rsyslog-gnutls_installed/rule.yml
@@ -37,6 +37,8 @@ template:
     name: package_installed
     vars:
         pkgname: rsyslog-gnutls
+        pkgname@sle12: rsyslog-module-gtls 
+        pkgname@sle15: rsyslog-module-gtls 
 
 fixtext: |-
     {{{ describe_package_install("rsyslog-gnutls") }}}
