Small corrections in package_dhcp_client_removed

--- a/linux_os/guide/services/dhcp/disabling_dhcp_client/package_dhcp_client_removed/rule.yml
+++ b/linux_os/guide/services/dhcp/disabling_dhcp_client/package_dhcp_client_removed/rule.yml
@@ -6,7 +6,7 @@ title: 'Uninstall DHCP Client Package'
 
 description: |-
     If the system does not need to act as a DHCP client,
-    the dhcp-cleint package can be uninstalled.
+    the dhcp-client package can be uninstalled.
     {{{ describe_package_remove(package="dhcp-client") }}}
 
 rationale: |-
@@ -33,7 +33,6 @@ references:
     nist-csf: PR.IP-1,PR.PT-3
 
 {{{ complete_ocil_entry_package(package="dhcp-client") }}}
-
 
 template:
     name: package_removed
