--- a/linux_os/guide/system/accounts/accounts-banners/banner_etc_motd/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/banner_etc_motd/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: alinux2,alinux3,anolis8,fedora,ol7,ol8,rhel7,rhel8,rhel9,rhv4,sle12,sle15
+prodtype: alinux2,alinux3,anolis8,fedora,ol7,ol8,rhel7,rhel8,rhel9,rhv4,sle12,sle15,ubuntu2004,ubuntu2204
 
 title: 'Modify the System Message of the Day Banner'
 
@@ -63,6 +63,8 @@ references:
     cis@rhel9: 1.7.1
     cis@sle12: 1.8.1.1
     cis@sle15: 1.8.1.1
+    cis@ubuntu2004: 1.8.1.1
+    cis@ubuntu2204: 1.7.1
 
 ocil_clause: 'it does not display the required banner'
 
