rsyslog_filecreatemode: Improve ocil_clause

--- a/linux_os/guide/system/logging/rsyslog_filecreatemode/rule.yml
+++ b/linux_os/guide/system/logging/rsyslog_filecreatemode/rule.yml
@@ -19,7 +19,7 @@ references:
     cis@ubuntu2004: 4.2.1.4
     cis@ubuntu2204: 4.2.2.4
 
-ocil_clause: '$FileCreateMode is not set or more permissive than 0640'
+ocil_clause: '$FileCreateMode is not set or is more permissive than 0640'
 
 ocil: |-
     Run the following command:
