Update remediations in alignment to OVAL
The remediations are now only updating accounts with a defined
password. The Ansible tasks names were also aligned to the project
Style Guide.

--- a/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_set_warn_age_existing/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_set_warn_age_existing/ansible/shared.yml
@@ -1,17 +1,19 @@
-# platform = multi_platform_sle
+# platform = multi_platform_all
 # reboot = false
-# strategy = restrict
+# strategy = configure
 # complexity = low
 # disruption = low
+
 {{{ ansible_instantiate_variables("var_accounts_password_warn_age_login_defs") }}}
 
-- name: Collect users with not correct number of days of warning before password expires
+- name: {{{ rule_title }}} - Collect Users With Incorrect Number of Days of Warning Before Password Expires
   ansible.builtin.command:
-    cmd: awk -F':' '$6 < {{ var_accounts_password_warn_age_login_defs }} || $6 == "" {print $1}' /etc/shadow
-  register: user_names
+    cmd: awk -F':' '(($6 < {{ var_accounts_password_warn_age_login_defs }} || $6 == "") && $2 ~ /^\$/) {print $1}' /etc/shadow
+  register: result_pass_warn_age_user_names
+  changed_when: false
 
-- name: Change the number of days of warning before password expires
+- name: {{{ rule_title }}} - Ensure the Number of Days of Warning Before Password Expires
   ansible.builtin.command:
     cmd: chage --warndays {{ var_accounts_password_warn_age_login_defs }} {{ item }}
-  with_items: '{{ user_names.stdout_lines }}'
-  when: user_names.stdout_lines | length > 0
+  with_items: '{{ result_pass_warn_age_user_names.stdout_lines }}'
+  when: result_pass_warn_age_user_names.stdout_lines | length > 0
