--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2007,10 +2007,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # missing rule for checking of /etc/shadow
+    status: automated
     rules:
-    - accounts_password_warn_age_login_defs
-    - var_accounts_password_warn_age_login_defs=7
+      - accounts_password_warn_age_login_defs
+      - var_accounts_password_warn_age_login_defs=7
+      - accounts_password_set_warn_age_existing
 
   - id: 5.5.1.4
     title: Ensure inactive password lock is 30 days or less (Automated)
