Enable systemd-journal-remote rule for RHEL
The socket_systemd-journal-remote_disabled rule is applicable to RHEL8
and RHEL9 and is also part of CIS requirements.
This commit enable the rule for RHEL8 and RHEL9 and update the 4.2.2.1.4
CIS requirement in the respective control files.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1611,13 +1611,14 @@ controls:
       - l1_workstation
     status: manual
 
-  # NEEDS RULE
   - id: 4.2.2.1.4
     title: Ensure journald is not configured to recieve logs from a remote client (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - socket_systemd-journal-remote_disabled
 
   - id: 4.2.2.2
     title: Ensure journald service is enabled (Automated)
