--- a/linux_os/guide/system/logging/journald/socket_systemd-journal-remote_disabled/rule.yml
+++ b/linux_os/guide/system/logging/journald/socket_systemd-journal-remote_disabled/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2204
+prodtype: rhel8,rhel9,ubuntu2204
 
 title: 'Disable systemd-journal-remote Socket'
 
@@ -20,7 +20,13 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel8: CCE-87605-2
+    cce@rhel9: CCE-87606-0
+
 references:
+    cis@rhel8: 4.2.2.1.4
+    cis@rhel9: 4.2.2.1.4
     cis@ubuntu2204: 4.2.1.1.4
 
 ocil_clause: 'the systemd-journal-remote socket is not masked'
