--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -6,8 +6,21 @@ version: '1.0.0'
 source: TBD
 
 controls:
+### 1. Hardware and its configuration
   - id: 1.1
     title: Protection of the BIOS or UEFI
     description: >-
       Users should protect their BIOS or UEFI with a password
+    status: manual
+    
+  - id: 1.2
+    title: Proper BIOS or UEFI configuration
+    description: >-
+      Users should disable features and devices in the BIOS or UEFI that are not in use and should only include trusted devices in the boot order
+    status: manual
+    
+  - id: 1.3
+    title: 64-bit OS
+    description: >-
+      When possible, users should use a 64-bit system and hardware that supports it
     status: manual
