Enable sshd_enable_warning_banner_net for RHEL
Enable the sshd_enable_warning_banner_net rule for RHEL products.
This rule satisfies the 5.2.15 CIS requirement for RHEL8 and RHEL9, and
the 5.3.18 CIS requirement for RHEL7.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1882,7 +1882,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # our rule configures /etc/issue, /etc/issue.net is required
+    status: automated
+    rules:
+      - sshd_enable_warning_banner_net
+    related_rules:
+      - sshd_enable_warning_banner
 
   - id: 5.3.19
     title: Ensure SSH PAM is enabled (Automated)
