--- a/linux_os/guide/services/ssh/ssh_server/sshd_enable_warning_banner_net/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_enable_warning_banner_net/rule.yml
@@ -22,7 +22,15 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel7: CCE-87977-5
+    cce@rhel8: CCE-87978-3
+    cce@rhel9: CCE-87979-1
+
 references:
+    cis@rhel7: 5.3.18
+    cis@rhel8: 5.2.15
+    cis@rhel9: 5.2.15
     cis@ubuntu2004: 5.2.18
     cis@ubuntu2204: 5.2.17
     cjis: 5.5.6
