Add package_dnsmasq_removed rule
The new package_dnsmasq_removed rule is created in order to meet the following CIS requirement for RHEL9:
- 2.2.14 - Ensure dnsmasq is not installed. (Automated)

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -821,7 +821,10 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - package_dnsmasq_removed
+
 
   - id: 2.2.15
     title: Ensure mail transfer agent is configured for local-only mode (Automated)
