--- a/controls/srg_ctr/SRG-APP-000243-CTR-000595.yml
+++ b/controls/srg_ctr/SRG-APP-000243-CTR-000595.yml
@@ -4,4 +4,10 @@ controls:
   - medium
   title: {{{ full_name }}} must prohibit containers from accessing privileged
     resources.
-  status: pending
+  status: manual
+  rules:
+    - scc_limit_host_dir_volume_plugin
+    - scc_limit_host_ports
+    - scc_limit_network_namespace
+    - scc_limit_process_id_namespace
+    - scc_limit_ipc_namespace
