Update CIS RHEL control files regarging nginx
The CIS requirement to remove web servers in RHEL8 and RHEL9 also asks
to remove the nginx package. The respective requirements were updated to
include the new templated rule.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -760,16 +760,15 @@ controls:
     rules:
       - package_tftp-server_removed
 
-  # NEEDS RULE
   - id: 2.2.8
     title: Ensure a web server is not installed (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: partial
+    status: automated
     rules:
       - package_httpd_removed
-      # Needs a rule to remove nginx
+      - package_nginx_removed
 
   # NEEDS RULE
   - id: 2.2.9
