Ensure checks on mount options return 'notapplicable' when mount does not exist
When /var/tmp is not a mount point, related checks ('nodev', 'nosuid',
'noexec') show as 'notapplicable', which is correct.
Previous to this commit, checks on /var/log and /var/log/audit showed
incorrectly as 'fail'; this commit ensures checks return 'notapplicable'
instead.

Signed-off-by: Renaud Métrich <rmetrich@redhat.com>

--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nodev/rule.yml
@@ -37,7 +37,8 @@ references:
     stigid@ol8: OL08-00-040129
     stigid@rhel8: RHEL-08-040129
 
-platform: machine
+platforms:
+  - machine and partition-var-log-audit
 
 template:
     name: mount_option
