--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_nodev/rule.yml
@@ -37,7 +37,8 @@ references:
     stigid@ol8: OL08-00-040126
     stigid@rhel8: RHEL-08-040126
 
-platform: machine
+platforms:
+  - machine and partition-var-log
 
 template:
     name: mount_option
