--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_nosuid/rule.yml
@@ -39,7 +39,8 @@ references:
     stigid@ol8: OL08-00-040127
     stigid@rhel8: RHEL-08-040127
 
-platform: machine
+platforms:
+  - machine and partition-var-log
 
 template:
     name: mount_option
