--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_noexec/rule.yml
@@ -35,7 +35,8 @@ references:
     stigid@ol8: OL08-00-040131
     stigid@rhel8: RHEL-08-040131
 
-platform: machine
+platforms:
+  - machine and partition-var-log-audit
 
 template:
     name: mount_option
