--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_noexec/rule.yml
@@ -38,7 +38,8 @@ references:
     stigid@ol8: OL08-00-040128
     stigid@rhel8: RHEL-08-040128
 
-platform: machine
+platforms:
+  - machine and partition-var-log
 
 template:
     name: mount_option
