Implemented a template 'partition.yml'
Applied the template to more file systems (/opt, /home, /boot/efi, etc.)

Signed-off-by: Renaud Métrich <rmetrich@redhat.com>

--- a/linux_os/guide/system/permissions/partitions/mount_option_home_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_home_nosuid/rule.yml
@@ -46,7 +46,7 @@ references:
     stigid@sle12: SLES-12-010790
     stigid@sle15: SLES-15-040140
 
-platform: machine
+platform: machine and partition[home]
 
 {{{ complete_ocil_entry_mount_option("/home", "nosuid") }}}
 
