--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nodev/rule.yml
@@ -37,8 +37,7 @@ references:
     stigid@ol8: OL08-00-040129
     stigid@rhel8: RHEL-08-040129
 
-platforms:
-  - machine and partition-var-log-audit
+platform: machine and partition[var-log-audit]
 
 template:
     name: mount_option
