--- a/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_log_audit_nosuid/rule.yml
@@ -36,8 +36,7 @@ references:
     stigid@ol8: OL08-00-040130
     stigid@rhel8: RHEL-08-040130
 
-platforms:
-  - machine and partition-var-log-audit
+platform: machine and partition[var-log-audit]
 
 template:
     name: mount_option
