--- a/linux_os/guide/system/permissions/partitions/mount_option_boot_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_boot_nosuid/rule.yml
@@ -35,7 +35,7 @@ references:
     stigid@ol8: OL08-00-010571
     stigid@rhel8: RHEL-08-010571
 
-platform: machine
+platform: machine and partition[boot]
 
 template:
     name: mount_option
