--- a/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nosuid/rule.yml
@@ -50,7 +50,7 @@ references:
     stigid@rhel7: RHEL-07-021024
     stigid@rhel8: RHEL-08-040121
 
-platform: machine
+platform: machine and partition[shm]
 
 template:
     name: mount_option
