--- a/linux_os/guide/system/permissions/partitions/mount_option_home_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_home_noexec/rule.yml
@@ -31,7 +31,7 @@ references:
     stigid@ol8: OL08-00-010590
     stigid@rhel8: RHEL-08-010590
 
-platform: machine
+platform: machine and partition[home]
 
 {{{ complete_ocil_entry_mount_option("/home", "noexec") }}}
 
