--- a/linux_os/guide/system/permissions/partitions/mount_option_opt_nosuid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_opt_nosuid/rule.yml
@@ -29,7 +29,7 @@ identifiers:
 references:
     anssi: BP28(R12)
 
-platform: machine
+platform: machine and partition[opt]
 
 template:
     name: mount_option
