--- a/linux_os/guide/system/permissions/partitions/mount_option_var_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_noexec/rule.yml
@@ -29,7 +29,7 @@ references:
     cis@alinux3: 1.1.3.2
     cis@rhel8: 1.1.3.3
 
-platform: machine
+platform: machine and partition[var]
 
 template:
     name: mount_option
