Set status supported for items we can implement

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -423,66 +423,79 @@ controls:
     levels:
     - enhanced
     title: Compile options for memory management
+    status: supported
 
   - id: R16
     levels:
     - enhanced
     title: Compile options for kernel data structures
+    status: supported
 
   - id: R17
     levels:
     - enhanced
     title: Compile options for the memory allocator
+    status: supported
 
   - id: R18
     levels:
     - enhanced
     title: Compile options for the management of kernel module
+    status: supported
 
   - id: R19
     levels:
     - enhanced
     title: Compile options for abnormal situations
+    status: supported
 
   - id: R20
     levels:
     - enhanced
     title: Compile options for kernel security functions
+    status: supported
 
   - id: R21
     levels:
     - enhanced
     title: Compile options for the compiler plugins
+    status: supported
 
   - id: R22
     levels:
     - enhanced
     title: Compile options for of the IP stack
+    status: supported
 
   - id: R23
     levels:
     - enhanced
     title: Compile options for various kernel behaviors
+    status: supported
 
   - id: R24
     levels:
     - enhanced
     title: Compile options for 32 bits architectures
+    status: supported
 
   - id: R25
     levels:
     - enhanced
     title: Compile options for x86_64 architectures
+    status: supported
 
   - id: R26
     levels:
     - enhanced
     title: Compile options for ARM architectures
+    status: supported
 
   - id: R27
     levels:
     - enhanced
     title: Compile options for ARM 64 architectures
+    status: supported
 
   - id: R28
     levels:
@@ -553,7 +566,7 @@ controls:
     notes: >-
       The rule disabling auto-mount for /boot is commented until the rules checking for other
       /boot mount options are updated to handle this usecase.
-    status: partial
+    status: supported
     #rules:
     #- mount_option_boot_noauto
 
@@ -1214,6 +1227,7 @@ controls:
     title: Logging activity by auditd
     description: >-
       The logging of the system activity must be done through the auditd service.
+    status: supported
     # rules: TBD
     # TODO: add rules
 
