Add and remove ANSSI references in rules
Some rules were added while others were removed.

--- a/linux_os/guide/system/permissions/files/file_permissions_ungroupowned/rule.yml
+++ b/linux_os/guide/system/permissions/files/file_permissions_ungroupowned/rule.yml
@@ -34,6 +34,7 @@ identifiers:
     cce@sle15: CCE-85658-3
 
 references:
+    anssi: BP28(R55)
     cis-csc: 1,11,12,13,14,15,16,18,3,5
     cis@alinux2: 6.1.12
     cis@alinux3: 6.1.13
