--- a/linux_os/guide/system/permissions/files/no_files_unowned_by_user/rule.yml
+++ b/linux_os/guide/system/permissions/files/no_files_unowned_by_user/rule.yml
@@ -34,6 +34,7 @@ identifiers:
     cce@sle15: CCE-85657-5
 
 references:
+    anssi: BP28(R55)
     cis-csc: 11,12,13,14,15,16,18,3,5,9
     cis@alinux2: 6.1.11
     cis@rhel7: 6.1.11
