--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_unprivileged_bpf_disabled/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_unprivileged_bpf_disabled/rule.yml
@@ -19,6 +19,7 @@ identifiers:
     cce@rhel9: CCE-83957-1
 
 references:
+    anssi: BP28(R9)
     disa: CCI-000366
     nist: AC-6,SC-7(10)
     ospp: FMT_SMF_EXT.1
