--- a/linux_os/guide/system/permissions/restrictions/sysctl_net_core_bpf_jit_harden/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_net_core_bpf_jit_harden/rule.yml
@@ -19,6 +19,7 @@ identifiers:
     cce@rhel9: CCE-83966-2
 
 references:
+    anssi: BP28(R12)
     disa: CCI-000366
     nist: CM-6,SC-7(10)
     ospp: FMT_SMF_EXT.1
