--- a/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/rule.yml
+++ b/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/rule.yml
@@ -19,6 +19,7 @@ rationale: |-
 severity: medium
 
 references:
+    anssi: BP28(R1)
     cis-csc: 12,15,8
     cjis: 5.10.1.2
     cobit5: APO13.01,DSS01.04,DSS05.02,DSS05.03
