Add CCEs to rules reference in ANSSI

--- a/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
@@ -18,6 +18,7 @@ severity: medium
 identifiers:
     cce@rhel7: CCE-80175-3
     cce@rhel8: CCE-85904-1
+    cce@rhel9: CCE-86215-1
 
 references:
     anssi: BP28(R13)
