--- a/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/rule.yml
+++ b/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/rule.yml
@@ -18,6 +18,9 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+  cce@rhel7: CCE-86030-4
+
 references:
     anssi: BP28(R1)
     cis-csc: 12,15,8
